--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "Thinking will not overcome fear but action will."
+description: "CS Undergraduate ('17-present), Dalian University of Technology"
 ---
 
 {% for post in paginator.posts %}
